--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <div class="p-6">
                             <h3 class="font-bold text-xl mb-2">English Conversation</h3>
                             <p class="text-gray-600 mb-4">Boost your confidence in speaking English in various situations.</p>
-                            <span class="text-sunrise-500 font-semibold">$200</span>
+                            <span class="text-sunrise-500 font-semibold"></span>
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300">
@@ -118,7 +118,7 @@
                         <div class="p-6">
                             <h3 class="font-bold text-xl mb-2">Business English</h3>
                             <p class="text-gray-600 mb-4">Master the language skills needed for professional success.</p>
-                            <span class="text-sunrise-500 font-semibold">$300</span>
+                            <span class="text-sunrise-500 font-semibold"></span>
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300">
@@ -126,7 +126,7 @@
                         <div class="p-6">
                             <h3 class="font-bold text-xl mb-2">IELTS Preparation</h3>
                             <p class="text-gray-600 mb-4">Get ready to ace your IELTS exam with our focused course.</p>
-                            <span class="text-sunrise-500 font-semibold">$250</span>
+                            <span class="text-sunrise-500 font-semibold"></span>
                         </div>
                     </div>
                 </div>
@@ -294,7 +294,7 @@
     </footer>
 
     <script>
-        // You can add any additional JavaScript here
+       
     </script>
 </body>
 </html>
